# kci-agent-v1.1

./: .env.example  .gitignore  README.md  kci-agent-v1.1_P0_fixes.relative.diff  pyproject.toml
data/processed/: menu_snapshot.json
src/: __init__.py  config.py  graph.py  main.py  state.py
src/agents/: backtest_agent.py  index_agent.py  report_agent.py
src/gates/: data_quality.py  research_guard.py
src/tools/apis/: __init__.py  ecos.py  kamis.py
src/utils/: math.py
