[tool.poetry]
name = "idiotology-kci-agent"
version = "1.1.0"
description = "Korean Chicken Index (KCI) AI Agent System - Research Grade"
authors = ["Idiotology <team@idiotology.io>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# AI/LLM
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-anthropic = "^0.2.0"
langchain-openai = "^0.2.0"
openai = "^1.0"

# Data Processing
pandas = "^2.2.0"
numpy = "^1.26.0"
scipy = "^1.12.0"
statsmodels = "^0.14.0"

# Web Scraping
selenium = "^4.18.0"
webdriver-manager = "^4.0.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"

# Public Data APIs
PublicDataReader = "^2.0"

# Database
sqlalchemy = "^2.0.0"

# Visualization
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

# Utilities
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
loguru = "^0.7.0"

# Optional: Notifications
python-telegram-bot = "^21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ipykernel = "^6.29.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
